--- a/app/views/shared/_header_common.html.erb
+++ b/app/views/shared/_header_common.html.erb
@@ -21,9 +21,9 @@
 <% end %>
 -->
 
-<%= form_tag search_titles_path, class: "" do %>
+<%= form_tag search_titles_path, class: "span2" do %>
   <input class="search-query" name="search_term" type="text" placeholder="search for videos here"></input>
-<a href='' class='button-a'><input type="submit" value="Search" class='button-a' href='' ></a>
+<input type="submit" value="Search" class='button-a' href='' >
 <% end %>
 
 <!--
