--- a/app/views/titles/index.html.erb
+++ b/app/views/titles/index.html.erb
@@ -14,6 +14,7 @@
 						<% category.recent_videos.each do |poster|%>
 							<form method='post'>
 								<a href='/titles/<%= poster.id %>'><img src='/<%= poster.small_image %>' style='height:200px' class="indent-a"></a>
+							</form>
 						<% end %>
 					<br/>
 					<br/>
